--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/vnguye51/Multiplayer-Game#readme",
   "dependencies": {
+    "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "datauri": "^1.1.0",
     "express": "^4.16.3",
+    "jsdom": "^12.0.0",
+    "npm": "^6.4.1",
+    "phaser": "^3.12.0",
     "socket.io": "^2.1.1"
   }
 }
