--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Multiplayer-Game",
+  "name": "multiplayer-game",
   "version": "1.0.0",
   "description": "Game using Phaser,Express,Socket",
   "main": "index.js",
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/vnguye51/Multiplayer-Game#readme",
   "dependencies": {
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
     "express": "^4.16.3",
     "npm": "^6.4.1",
     "phaser": "^3.12.0",
