--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/vnguye51/Multiplayer-Game#readme",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "npm": "^6.4.1",
     "phaser": "^3.12.0",
