--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "mongoose": "^5.3.4",
     "npm": "^6.4.1",
     "phaser": "^3.12.0",
     "socket.io": "^2.1.1"
